tests/parsing/smtlib/v2.6/errors/014_sorted_var_list_unclosed_2.expected
File "tests/parsing/smtlib/v2.6/errors/014_sorted_var_list_unclosed_2.smt2", line 2, character 25-27:
2 | (assert (forall ((x int) as) x))
                             ^^
Error while parsing a list of sorted variables, read the reserved word 'as',
      but expected either a closing parentheis, or a sorted var of the form
      "(var sort)".
